# PointCloud-Alignement

./: pyproject.toml  rectangles.npy
scripts/global_local_reg/: feature_extraction.py  global_registration.py  icp.py  objMerge.py
scripts/global_local_reg/converter/: meshScaler.py  pointCloudconverter.py
scripts/global_registration/: main.py
scripts/global_registration/lib/: clusterer.py  globale_placement.py  local_placement.py  preparer.py  preprocesser.py  ransac_2d.py  registrator.py  room_segmentation.py  segmentor.py  visualizer.py
scripts/ransac_edges/: clusterer.py  main.py  preparer.py  preprocesser.py  registrator.py  room_segmentation.py  visualizer.py
src/: main.py
src/data/: DFloor.ifc
src/lib/: converter.py  segmentor.py  visualizer.py
